--- a/index.html
+++ b/index.html
@@ -30,6 +30,57 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">8 am</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">9 am</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">10 am</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">11 am</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">12 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">1 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">2 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">3 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">4 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">5 pm</span>
+          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        </div>
+        
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
