changed time blocks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,56 +32,96 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">8 am</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+      <section class="time-block" class="row">
+        <div class="col-2">8 am</div>
+        <div class="col-8">
+          <input placeholder="Enter your appointment">
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">9 am</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+        <div class="col-2">
+          <button class="saveBtn">Save</button>
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">10 am</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+      </section>
+      <section class="time-block">
+        <div>9 am</div>
+        <div>
+          <input placeholder="Enter your appointment">
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">11 am</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+        <div>
+          <button>Save</button>
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">12 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+      </section>
+      <section class="time-block">
+        <div>10 am</div>
+        <div>
+          <input placeholder="Enter your appointment">
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">1 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+        <div>
+          <button>Save</button>
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">2 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+      </section>
+      <section class="time-block">
+        <div>11 am</div>
+        <div>
+          <input placeholder="Enter your appointment">
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">3 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+        <div>
+          <button>Save</button>
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">4 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+      </section>
+      <section class="time-block">
+        <div>12 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
         </div>
-        <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon1">5 pm</span>
-          <input type="text" class="form-control" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
-          <button class="btn btn-outline-secondary" type="button" id="button-addon2">Save</button>
+        <div>
+          <button>Save</button>
         </div>
+      </section>
+      <section class="time-block">
+        <div>1 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
+        </div>
+        <div>
+          <button>Save</button>
+        </div>
+      </section>
+      <section class="time-block">
+        <div>2 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
+        </div>
+        <div>
+          <button>Save</button>
+        </div>
+      </section>
+      <section class="time-block">
+        <div>3 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
+        </div>
+        <div>
+          <button>Save</button>
+        </div>
+      </section>
+      <section class="time-block">
+        <div>4 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
+        </div>
+        <div>
+          <button>Save</button>
+        </div>
+      </section>
+      <section class="time-block">
+        <div>5 pm</div>
+        <div>
+          <input placeholder="Enter your appointment">
+        </div>
+        <div>
+          <button>Save</button>
+        </div>
+      </section>
         
     </div>
 
