--- a/index.html
+++ b/index.html
@@ -32,96 +32,16 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <section class="time-block" class="row">
-        <div class="col-2">8 am</div>
-        <div class="col-8">
+      <section class="time-block row">
+        <div class="col-2 hour">8 am</div>
+        <div class="col-8 textarea">
           <input placeholder="Enter your appointment">
         </div>
         <div class="col-2">
           <button class="saveBtn">Save</button>
         </div>
       </section>
-      <section class="time-block">
-        <div>9 am</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>10 am</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>11 am</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>12 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>1 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>2 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>3 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>4 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
-      <section class="time-block">
-        <div>5 pm</div>
-        <div>
-          <input placeholder="Enter your appointment">
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </section>
+      
         
     </div>
 
