changed time block so it has label

--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <section class="time-block row">
-        <div class="col-2 hour">8 am</div>
-        <div class="col-8 textarea">
-          <input placeholder="Enter your appointment">
-        </div>
-        <div class="col-2">
-          <button class="saveBtn">Save</button>
-        </div>
+        <label for="8am" class="time-label">8 am</label>  
+        <textarea id="8am" class="time" name="8am"></textarea>      
+        <button class="saveBtn">Save</button>
       </section>
       
         
