formatting for blocks

--- a/index.html
+++ b/index.html
@@ -32,11 +32,26 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <section class="time-block row">
-        <label for="8am" class="time-label">8 am</label>  
-        <textarea id="8am" class="time" name="8am"></textarea>      
-        <button class="saveBtn">Save</button>
-      </section>
+      <div class="row">
+        <div class="col-2 nopadding">
+          <label for="8am" class="time-label">8 am</label>  
+        </div>
+        <div class="col-8">
+          <textarea id="8am" class="time" name="8am"></textarea> 
+        </div> 
+        <div class="col-2">
+          <button class="saveBtn">Save</button>
+        </div> 
+        <div class="col-2 nopadding">
+          <label for="9am" class="time-label">9 am</label>  
+        </div>
+        <div class="col-8">
+          <textarea id="9am" class="time" name="9am"></textarea> 
+        </div> 
+        <div class="col-2">
+          <button class="saveBtn">Save</button>
+        </div>       
+      </div>
       
         
     </div>
