--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="8am" class="time-label">8 am</label>  
+          <div class="label-border">
+            <label for="8am" class="time-label">8 am</label> 
+          </div>
         </div>
         <div class="col-8">
           <textarea id="8am" class="time" name="8am"></textarea> 
@@ -45,7 +47,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="9am" class="time-label">9 am</label>  
+          <div class="label-border">
+            <label for="9am" class="time-label">9 am</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="9am" class="time" name="9am"></textarea> 
@@ -56,7 +60,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="10am" class="time-label">10 am</label>  
+          <div class="label-border">
+            <label for="10am" class="time-label">10 am</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="10am" class="time" name="10am"></textarea> 
@@ -67,7 +73,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="11am" class="time-label">11 am</label>  
+          <div class="label-border">
+            <label for="11am" class="time-label">11 am</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="11am" class="time" name="11am"></textarea> 
@@ -78,7 +86,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="12pm" class="time-label">12 pm</label>  
+          <div class="label-border">
+            <label for="12pm" class="time-label">12 pm</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="12pm" class="time" name="12pm"></textarea> 
@@ -89,7 +99,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="1pm" class="time-label">1 pm</label>  
+          <div class="label-border">
+            <label for="1pm" class="time-label">1 pm</label>  
+          </div>
         </div>
         <div class="col-8">
           <textarea id="1pm" class="time" name="1pm"></textarea> 
@@ -100,7 +112,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="2pm" class="time-label">2 pm</label>  
+          <div class="label-border">
+            <label for="2pm" class="time-label">2 pm</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="2pm" class="time" name="2pm"></textarea> 
@@ -111,7 +125,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="3pm" class="time-label">3 pm</label>  
+          <div class="label-border">
+            <label for="3pm" class="time-label">3 pm</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="3pm" class="time" name="3pm"></textarea> 
@@ -122,7 +138,9 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="4pm" class="time-label">4 pm</label>  
+          <div class="label-border">
+            <label for="4pm" class="time-label">4 pm</label>
+          </div>  
         </div>
         <div class="col-8">
           <textarea id="4pm" class="time" name="4pm"></textarea> 
@@ -133,10 +151,12 @@
       </div>
       <div class="row">
         <div class="col-2 nopadding">
-          <label for="5pm" class="time-label">5 pm</label>  
+          <div class="label-border">
+            <label for="5pm" class="time-label">5 pm</label>
+          </div>  
         </div>
         <div class="col-8">
-          <textarea id="5pm" class="time" name="5pm"></textarea> 
+          <textarea id="12pm" class="time" name="12pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
