--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="col-8">
-          <textarea id="8am" class="time" name="8am"></textarea> 
+          <textarea id="8" class="time" name="8am"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -52,7 +52,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="9am" class="time" name="9am"></textarea> 
+          <textarea id="9" class="time" name="9am"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -65,7 +65,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="10am" class="time" name="10am"></textarea> 
+          <textarea id="10" class="time" name="10am"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -78,7 +78,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="11am" class="time" name="11am"></textarea> 
+          <textarea id="11" class="time" name="11am"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -91,7 +91,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="12pm" class="time" name="12pm"></textarea> 
+          <textarea id="12" class="time" name="12pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="col-8">
-          <textarea id="1pm" class="time" name="1pm"></textarea> 
+          <textarea id="1" class="time" name="1pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -117,7 +117,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="2pm" class="time" name="2pm"></textarea> 
+          <textarea id="2" class="time" name="2pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -130,7 +130,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="3pm" class="time" name="3pm"></textarea> 
+          <textarea id="3" class="time" name="3pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -143,7 +143,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="4pm" class="time" name="4pm"></textarea> 
+          <textarea id="4" class="time" name="4pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
@@ -156,7 +156,7 @@
           </div>  
         </div>
         <div class="col-8">
-          <textarea id="12pm" class="time" name="12pm"></textarea> 
+          <textarea id="5" class="time" name="5pm"></textarea> 
         </div> 
         <div class="col-2">
           <button class="saveBtn">Save</button>
