function to save text entered to localStorage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <textarea id="8" class="time" name="8am"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('8')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -55,7 +55,7 @@
           <textarea id="9" class="time" name="9am"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('9')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -68,7 +68,7 @@
           <textarea id="10" class="time" name="10am"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('10')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -81,7 +81,7 @@
           <textarea id="11" class="time" name="11am"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('11')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -94,7 +94,7 @@
           <textarea id="12" class="time" name="12pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('12')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -107,7 +107,7 @@
           <textarea id="13" class="time" name="1pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('13')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -120,7 +120,7 @@
           <textarea id="14" class="time" name="2pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('14')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -133,7 +133,7 @@
           <textarea id="15" class="time" name="3pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('15')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -146,7 +146,7 @@
           <textarea id="16" class="time" name="4pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('16')">Save</button>
         </div> 
       </div>
       <div class="row">
@@ -159,7 +159,7 @@
           <textarea id="17" class="time" name="5pm"></textarea> 
         </div> 
         <div class="col-2">
-          <button class="saveBtn">Save</button>
+          <button class="saveBtn" onclick="handleSave('17')">Save</button>
         </div> 
       </div>
       
